--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,8 @@ jobs:
           restore-keys: ${{ runner.os }}-m2-j${{ matrix.java }}
 
       - name: Ensure dependencies are present
-        run: mvn -B dependency:resolve dependency:resolve-plugins --settings $SETTINGS_FILE || true
+        run: mvn -B dependency:resolve dependency:resolve-plugins --settings $SETTINGS_FILE
+        continue-on-error: true
 
       - name: Build
         run: mvn install --settings $SETTINGS_FILE -DskipTests=true -Dmaven.javadoc.skip=true
@@ -53,16 +54,7 @@ jobs:
           mvn site site:stage --settings $SETTINGS_FILE
           touch $SITE_DIR/.nojekyll
 
-      - name: "TEST DOC BUILD!"
-        if: ${{ github.ref != 'refs/heads/master' }}
-        run: ls -AlRF
-        working-directory: ${{ env.SITE_DIR }}
-        env:
-          CLICOLOR_FORCE: 1
-          TERM: xterm-color
-
       - name: Deploy to GitHub Pages
-        if: ${{ github.ref == 'refs/heads/master' }}
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
