--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,7 +87,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: 8
+        java: [8]
     steps:
     - uses: actions/checkout@v2
     - name: Set branch name and PR number
