Milestones are by ID, not by name
Very easy to miss seeing that in the docs...

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,7 +25,7 @@ updates:
     labels:
       - "bug"
       - "dependabot"
-    milestone: "7.0.0"
+    milestone: 6   # This is the *ID* for the 7.0.0 milestone
     assignees:
       - "dkfellows"
     reviewers:
