Apparently we can update to the new version
The old version was doing some strange failures...
(This version has wrong triggers, for testing)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -15,9 +15,9 @@
 
 name: Publish
 
-on: #[push]
-  push:
-    branches: [ master ]
+on: [push]
+#  push:
+#    branches: [ master ]
 
 jobs:
   build:
@@ -55,9 +55,8 @@ jobs:
           touch $SITE_DIR/.nojekyll
 
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@3.7.1
+        uses: JamesIves/github-pages-deploy-action@4.0.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: gh-pages
           folder: ${{ env.SITE_DIR }}
 
