Make uploading the coverage report optional

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,7 @@ jobs:
         CI_BUILD_NUMBER: ${{ github.run_id }}
         CI_BUILD_URL: https://github.com/${{ github.repository }}/commit/${{ github.event.after }}/checks
         COVERALLS_SECRET: ${{ secrets.GITHUB_TOKEN }}
+      continue-on-error: true
     - name: Upload Build (JDK 8 only)
       if: matrix.java == 8
       uses: actions/upload-artifact@v2
