--- a/pom.xml
+++ b/pom.xml
@@ -402,6 +402,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<module>SpiNNaker-pacman</module>
 		<module>SpiNNaker-data-specification</module>
 		<module>SpiNNaker-front-end</module>
+		<module>SpiNNaker-allocserv</module>
 	</modules>
 	<name>SpiNNaker Java Host</name>
 	<description>Implementation of the host software for SpiNNaker in Java.</description>
