--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>cxf-spring-boot-starter-jaxrs</artifactId>
 				<version>${cxf.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.springframework</groupId>
+				<artifactId>spring-test</artifactId>
+				<version>5.3.6</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
