Style fixing: step 1

--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -26,6 +26,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 	</parent>
 	<artifactId>SpiNNaker-allocserv</artifactId>
 	<packaging>war</packaging>
+	<properties>
+		<jetty.port>8080</jetty.port>
+		<jetty.root>/</jetty.root>
+	</properties>
 
 	<build>
 		<resources>
@@ -44,28 +48,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.eclipse.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<configuration>
-					<httpConnector>
-						<port>${jetty.port}</port>
-					</httpConnector>
-					<webAppConfig>
-						<contextPath>${jetty.root}</contextPath>
-					</webAppConfig>
-					<systemProperties>
-						<systemProperty>
-							<name>java.awt.headless</name>
-							<value>true</value>
-						</systemProperty>
-						<systemProperty>
-							<name>org.apache.cxf.io.CachedOutputStream.MaxSize</name>
-							<value>-1</value>
-						</systemProperty>
-					</systemProperties>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -133,4 +115,37 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>commons-io</artifactId>
 		</dependency>
 	</dependencies>
+
+	<profiles>
+		<profile>
+			<id>jetty</id>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+						<version>11.0.2</version>
+						<configuration>
+							<httpConnector>
+								<port>${jetty.port}</port>
+							</httpConnector>
+							<webAppConfig>
+								<contextPath>${jetty.root}</contextPath>
+							</webAppConfig>
+							<systemProperties>
+								<systemProperty>
+									<name>java.awt.headless</name>
+									<value>true</value>
+								</systemProperty>
+								<systemProperty>
+									<name>org.apache.cxf.io.CachedOutputStream.MaxSize</name>
+									<value>-1</value>
+								</systemProperty>
+							</systemProperties>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 </project>
