--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<jacoco.version>0.8.7</jacoco.version>
 		<javadoc.version>3.3.0</javadoc.version>
 		<cxf.version>3.4.3</cxf.version>
+		<spring.version>5.2.13.RELEASE</spring.version>
 	</properties>
 
 	<dependencyManagement>
@@ -178,7 +179,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<dependency>
 				<groupId>org.springframework</groupId>
 				<artifactId>spring-webmvc</artifactId>
-				<version>5.2.13.RELEASE</version>
+				<version>${spring.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.springframework.security</groupId>
