--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -25,7 +25,8 @@ spring:
   application:
     name: spalloc
   mvc:
-    servlet.path: /
+    servlet:
+      path: /system
   task:
     scheduling:
       pool:
@@ -39,10 +40,12 @@ server:
 
 cxf:
   path: /
-#  jaxrs:
-#    component-scan: true
-#    classes-scan-packages: uk.ac.manchester.spinnaker.alloc
-
+  servlet.init: 
+    service-list-path: info
+  jaxrs:
+    component-scan: true
+    classes-scan-packages:
+      uk.ac.manchester.spinnaker.alloc,org.apache.cxf.jaxrs.swagger,org.apache.cxf.metrics
 
 #cxf.rest.path: /
 #num.threads: 16
