--- a/pom.xml
+++ b/pom.xml
@@ -580,6 +580,14 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		</plugins>
 	</reporting>
 
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Packages</name>
+			<url>https://maven.pkg.github.com/SpiNNakerManchester/JavaSpiNNaker</url>
+		</repository>
+	</distributionManagement>
+
 	<profiles>
 		<profile>
 			<id>MergedBuild</id>
