Add ability to look up boards by IP address

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -18,7 +18,7 @@ logging:
     root: INFO
     org.springframework.boot.autoconfigure.logging: INFO
     org.springframework.beans.factory.support: INFO
-    org.apache.cxf: DEBUG
+    #org.apache.cxf: DEBUG
     org.apache.cxf.phase: INFO
     org.apache.cxf.jaxrs.utils: INFO
 
