--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-resources-plugin</artifactId>
 					<version>3.2.0</version>
+					<configuration>
+						<!-- This is weird, but needed. -->
+						<propertiesEncoding>ISO-8859-1</propertiesEncoding>
+					</configuration>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
