--- a/pom.xml
+++ b/pom.xml
@@ -345,6 +345,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>**/*.json</exclude>
 							<exclude>**/*.txt</exclude>
 							<exclude>**/*.csv</exclude>
+							<exclude>**/*.fig</exclude>
 							<exclude>**/nbproject/**</exclude>
 							<exclude>**/target/**</exclude>
 							<exclude>README.md</exclude>
