Can now log in and log back out again

--- a/SpiNNaker-allocserv/src/main/resources/application.yml
+++ b/SpiNNaker-allocserv/src/main/resources/application.yml
@@ -17,7 +17,7 @@ logging:
   level:
     root: INFO
     # org.apache.catalina: DEBUG
-    # org.springframework.web: DEBUG
+    # org.springframework.security.web: TRACE
 
 spring:
   main:
