Converted to using typescript for greater code sanity
Machinery is in place to build the actual JS for deployment

--- a/pom.xml
+++ b/pom.xml
@@ -352,6 +352,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 							<exclude>SECURITY.md</exclude>
 							<exclude>**/dependency-reduced-pom.xml</exclude>
 							<exclude>**/.dbeaver/**</exclude>
+							<exclude>**/node_modules/**</exclude>
 						</excludes>
 						<consoleOutput>true</consoleOutput>
 					</configuration>
