--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -31,6 +31,8 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 		<jetty.port>8080</jetty.port>
 		<jetty.root>/</jetty.root>
 		<jackson.version>2.12.3</jackson.version>
+		<npm_plugin.version>1.12.0</npm_plugin.version>
+		<node.version>v4.6.0</node.version>
 	</properties>
 
 	<build>
@@ -50,12 +52,54 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
 					<failOnMissingWebXml>false</failOnMissingWebXml>
+					<webResources>
+						<webResource>
+							<directory>${project.build.directory}/js</directory>
+							<targetPath>META-INF/public-web-resources</targetPath>
+						</webResource>
+					</webResources>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring.boot.version}</version>
+			</plugin>
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<version>${npm_plugin.version}</version>
+				<executions>
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<phase>initialize</phase>
+					</execution>
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>process-resources</phase>
+					</execution>
+					<execution>
+						<id>npm run build</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<phase>compile</phase>
+						<configuration>
+							<arguments>run build</arguments>
+						</configuration>
+					</execution>
+				</executions>
+				<configuration>
+					<nodeVersion>${node.version}</nodeVersion>
+					<installDirectory>target</installDirectory>
+					<workingDirectory>src/main/frontend</workingDirectory>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
