--- a/SpiNNaker-allocserv/src/main/frontend/package.json
+++ b/SpiNNaker-allocserv/src/main/frontend/package.json
@@ -10,6 +10,6 @@
 	},
 	"browser": "Chrome",
 	"scripts": {
-		"build": "tsc ../typescript/*.ts --target ES6 --outFile ../../../target/js/spinnaker.js"
+		"build": "tsc ${TYPESCRIPT_SRC_DIR:=../typescript}/*.ts --target ${TYPESCRIPT_TARGET:=ES6} --outFile ${MAVEN_BUILD_DIR:=../../../target}/js/spinnaker.js"
 	}
 }
