--- a/SpiNNaker-allocserv/src/main/frontend/package.json
+++ b/SpiNNaker-allocserv/src/main/frontend/package.json
@@ -2,7 +2,7 @@
 	"name": "spalloc-support",
 	"version": "0.0.1",
 	"description": "Support code for JavaSpiNNaker's Spalloc Service implementation",
-	"license": "GPL-3.0-only",
+	"license": "GPL-3.0",
 	"repository": "github:SpiNNakerManchester/JavaSpiNNaker",
 	"author": "Donal K. Fellows",
 	"dependencies": {
