--- a/SpiNNaker-allocserv/pom.xml
+++ b/SpiNNaker-allocserv/pom.xml
@@ -65,6 +65,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<version>${spring.boot.version}</version>
+				<configuration>
+					<systemPropertyVariables>
+						<java.util.logging.manager>org.apache.logging.log4j.jul.LogManager</java.util.logging.manager>
+					</systemPropertyVariables>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>com.github.eirslett</groupId>
@@ -256,8 +261,27 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 			<artifactId>org.liveSense.scripting.jsp.taglib.jsonatg</artifactId>
 			<version>${jsontaglib.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-jul</artifactId>
+		</dependency>
 	</dependencies>
 
 	<description>A board allocation service for SpiNNaker.</description>
 	<name>SpiNNaker Allocation Server</name>
+
+	<profiles>
+		<profile>
+			<id>devtools</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<dependencies>
+				<dependency>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-devtools</artifactId>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
