--- a/pom.xml
+++ b/pom.xml
@@ -207,6 +207,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<artifactId>spring-test</artifactId>
 				<version>5.3.6</version>
 			</dependency>
+			<dependency>
+				<groupId>info.picocli</groupId>
+				<artifactId>picocli</artifactId>
+				<version>4.6.1</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
