--- a/pom.xml
+++ b/pom.xml
@@ -108,9 +108,11 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<scope>runtime</scope>
 			</dependency>
 			<dependency>
-				<groupId>com.fasterxml.jackson.module</groupId>
-				<artifactId>jackson-module-jaxb-annotations</artifactId>
+				<groupId>com.fasterxml.jackson</groupId>
+				<artifactId>jackson-bom</artifactId>
 				<version>${jackson.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.commons</groupId>
@@ -186,11 +188,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 				<groupId>org.springframework.security</groupId>
 				<artifactId>spring-security-core</artifactId>
 				<version>5.4.6</version>
-			</dependency>
-			<dependency>
-				<groupId>com.fasterxml.jackson.jaxrs</groupId>
-				<artifactId>jackson-jaxrs-json-provider</artifactId>
-				<version>2.12.3</version>
 			</dependency>
 			<dependency>
 				<groupId>javax</groupId>
